dnl Process this file with autoconf to produce a configure script.
sinclude(../common/aclocal.m4)
AC_PREREQ(2.5)dnl
AC_INIT(Makefile.in)

SIM_AC_COMMON

AC_CHECK_HEADERS(unistd.h)

AM_PATH_GTK(1.1.3,
          [LIBS="$LIBS $GTK_LIBS"
           CFLAGS="$CFLAGS $GTK_CFLAGS"],
          AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path?))


SIM_AC_OUTPUT
